--- a/views/Organ_Form.html
+++ b/views/Organ_Form.html
@@ -140,10 +140,8 @@
                                     <option>eyes</option>
                                     <option>heart</option>
                                     <option>liver</option>
-                                    <option>AB+</option>
-                                    <option>AB-</option>
-                                    <option>O+</option>
-                                    <option>O-</option>
+                                    <option>brain</option>
+                                    
                                 </select>
                             </div>
                         </div>
