--- a/views/MCI.html
+++ b/views/MCI.html
@@ -79,7 +79,7 @@
                 <div class="card-body">
                     <h2 class="title">Multiple casualty incident</h2>
 
-                    <div class="row row-space">
+                    <div class="row row-space" action="/MCI">
                         <div class="col-6">
 
                             <div class="input-group">
@@ -109,7 +109,6 @@
 
 
 </body>
-<!-- This templates was made by Colorlib (https://colorlib.com) -->
+
 
 </html>
-<!-- end document-->
