--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,7 @@
 </head>
 
 
+
 <body>
 
     <nav class="navbar">
@@ -65,7 +66,7 @@
         <div class="expo">
 
             <a href="#services">
-                <button class="glow-on-hover">Explore </button>
+                <button class="glow-on-hover" id="explo">Explore </button>
             </a>
 
         </div>
@@ -176,13 +177,13 @@
             <div class="boxes">
                 <div class="inner-box">
 
-                   
+
                     <button class="inner-box"
                         onclick="window.location.href='https://www.netmeds.com/non-prescriptions/kapiva-wheat-grass-juice-1-l-1l';">
                         <img src="https://www.netmeds.com/images/product-v1/150x150/821307/kapiva_wheat_grass_juice_1_ltr_0_2.jpg"
                             alt="" height="100" width="100" />
                     </button>
-                  
+
                 </div>
 
                 <div class="para">
@@ -513,7 +514,7 @@
 
             </div>
         </div>
-         <!-- <div class="name">
+        <!-- <div class="name">
             my name
             </div> -->
 
@@ -583,15 +584,15 @@
             </div>
             <div class="Sub-Tital-organ">
                 <h2>Donation After Life</h2>
-              <li> When you die, you can give an organ—or part of an organ—to someone in need. You can improve and
-                    savelives.</li> 
+                <li> When you die, you can give an organ—or part of an organ—to someone in need. You can improve and
+                    savelives.</li>
                 <li> Come ahead and take part in saving lives..</li>
                 <li> No caste – No bar – save lives – donate organs.</li>
                 <li> Support organ donation across the nation.</li>
 
             </div>
         </div>
-       
+
         <div>
             <nav class="bb_nav">
 
@@ -613,22 +614,26 @@
                     <div class="Services">
                         <h1>About Us</h1>
                     </div>
-                   
-                    <div class="info-in-servicebox_innerbox" id="sumit_img">
-                        <img src="/static/img/sumit.jpg" alt="">
-                        My name is sumit sahebrao jagtap
+                    <div class="content_about">
+                        <p>The power of community to create health is far greater than any physician, clinic or hospital.
+                         </p>
                     </div>
+
                     <div class="info-in-servicebox_innerbox" id="sumit_img">
-                        <img src="/static/img/sumit.jpg" alt="">
-                        My name is sumit sahebrao jagtap
+                        <img src="/static/img/sumit.jpg" alt="sumit">
+                        Sumit Sahebrao Jagtap. [Department of Information Technology]
                     </div>
-                    <div class="info-in-servicebox_innerbox" id="sumit_img">
-                        <img src="/static/img/shubham_shirsath.jpg" alt="">
-                        My name is shubham shirsath
+                    <div class="info-in-servicebox_innerbox" id="mayur_img">
+                        <img src="/static/img/mayur.jpeg" alt="mayur">
+                        Mayur Mohen Indalkar. [Department of Information Technology]
                     </div>
-                    <div class="info-in-servicebox_innerbox">
-                        <img src="/static/img/med1.png" alt="">
-                        My name is shubham shirsath
+                    <div class="info-in-servicebox_innerbox" id="shubham_img">
+                        <img src="/static/img/shubham_shirsath.jpg" alt="shubham">
+                        Shubham Manik Shirsat.  [Department of Information Technology]
+                    </div>
+                    <div class="info-in-servicebox_innerbox" id="manish_img">
+                        <img src="/static/img/manish.jpeg" alt="manish">
+                        Manish Mahendra Gamare.  [Department of Information Technology]
                     </div>
                 </div>
             </div>
