--- a/views/viewHospitalUse.html
+++ b/views/viewHospitalUse.html
@@ -84,7 +84,7 @@
                 <thead>
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">Donor id</th>
+                        <th scope="col">Patient id</th>
                         <th scope="col">Full name</th>
                         <th scope="col">Number of requested blood units</th>
                         <th scope="col">Blood type</th>
