--- a/views/bb.html
+++ b/views/bb.html
@@ -21,6 +21,8 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
     <style>
+        
+@import url('https://fonts.googleapis.com/css2?family=Days+One&family=Fredoka+One&family=Libre+Baskerville:wght@700&family=Noto+Serif+JP:wght@600;700&family=Orbitron&family=Oswald:wght@500&display=swap');
         body,
         html {
             height: 100%;
@@ -44,7 +46,9 @@
             text-align: center !important;
         }
         .front-name {
-            margin: 205px 286px;
+            /* margin: 205px 286px; */
+            margin: 181px 219px;
+            /* margin: 205px 286px; */
             position: absolute;
             display:flex;
             max-width: 100%;
@@ -58,10 +62,11 @@
             visibility: visible;
             animation: fade 15s linear;
             font-size: 78px;
+            font-family: 'Libre Baskerville', serif;
 
 
 
-            font-family: 'Oswald', sans-serif;
+            /* font-family: 'Oswald', sans-serif; */
 
 
 
