--- a/views/hospitalOrder.html
+++ b/views/hospitalOrder.html
@@ -35,6 +35,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
+        <style>
+        .btnclass{
+            border: 1px solid white;
+            color: white;
+            background-color: white;
+        }
+    </style>
 </head>
 
 <body>
@@ -122,6 +129,7 @@
                             </div>
                         </div>
                         <br>
+                       
                         <div class="p-t-15">
                             <button class="btn btn--pink" type="button" onclick="addOrder()">Submit</button>
                         </div>
