--- a/views/organ_donation.html
+++ b/views/organ_donation.html
@@ -21,6 +21,8 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
     <style>
+                
+@import url('https://fonts.googleapis.com/css2?family=Days+One&family=Fredoka+One&family=Libre+Baskerville:wght@700&family=Noto+Serif+JP:wght@600;700&family=Orbitron&family=Oswald:wght@500&display=swap');
         body,
         html {
             height: 100%;
@@ -45,7 +47,7 @@
         }
 
         .front-name {
-            margin: 205px 286px;
+            margin: 205px 219px;
             position: absolute;
             display: flex;
             max-width: 100%;
@@ -59,10 +61,11 @@
             visibility: visible;
             animation: fade 15s linear;
             font-size: 78px;
+            font-family: 'Libre Baskerville', serif;
 
 
 
-            font-family: 'Oswald', sans-serif;
+        
 
 
 
@@ -170,7 +173,7 @@
     <div class="front-name">
         <p style="margin-top: -100px;
         margin-bottom: 0rem;">
-            Save lives with MedTech
+            Save Lives With MedTech
 
         </p>
         <span class="progress"></span>
